--- a/src/locales/id/backend.json
+++ b/src/locales/id/backend.json
@@ -1,7 +1,7 @@
 {
-    "no_data_found": "Data not found",
-    "invalid_user": "Invalid username or password!",
-    "data_found": "Data retrieved successfully!",
-    "connection_string_not_found": "Please specify connection string",
-    "bad_connection_string_format": "Provided connection string is not in correct format"
+    "no_data_found": "Tidak ada data",
+    "invalid_user": "Nama pengguna atau kata sandi tidak valid!",
+    "data_found": "Data berhasil diambil!",
+    "connection_string_not_found": "Harap tentukan string koneksi",
+    "bad_connection_string_format": "String koneksi yang diberikan tidak dalam format yang benar"
 }
