added localized headers

--- a/src/locales/en/headers.json
+++ b/src/locales/en/headers.json
@@ -1,3 +1,41 @@
 {
-    
+    "cashier_header": "Cashier",
+    "date_header": "Date",
+    "opening_header": "Opening",
+    "running_opening_header": "RunningOpening",
+    "dp_header": "DP",
+    "running_dp_header": "RunningDP",
+    "voucher_header": "Voucher",
+    "running_voucher_header": "RunningVoucher",
+    "cash_header": "Cash",
+    "running_cash_header": "RunningCash",
+    "payroll_header": "Payroll",
+    "running_payroll_header": "RunningPayroll",
+    "credit_card_header": "CreditCard",
+    "running_credit_card_header": "RunningCreditCard",
+    "debit_card_header": "DebitCard",
+    "running_debit_card_header": "RunningDebitCard",
+    "online_header": "Online",
+    "running_online_header": "RunningOnline",
+    "withdrawn_header": "Withdrawn",
+    "running_withdrawn_header": "RunningWithdrawn",
+    "cancel_header": "Cancel",
+    "running_cancel_header": "RunningCancel",
+    "balance_header": "Balance",
+    "running_balance_header": "RunningBalance",
+    "stock_id_header": "StockID",
+    "stock_name_header": "StockName",
+    "price_header": "Price",
+    "unit_header": "Unit",
+    "qty_header": "Qty",
+    "currency_header": "Currency",
+    "amount_header": "Amount",
+    "amount_tax_header": "AmountTax",
+    "subtotal_header": "SubTotal",
+    "amount_tax_total_header": "AmountTaxTotal",
+    "invoice_header": "Invoice",
+    "supplier_header": "Supplier",
+    "customer_header": "Customer",
+    "location_header": "Location",
+    "total_balance_header": "TotalBalance"
 }
