--- a/src/locales/id/headers.json
+++ b/src/locales/id/headers.json
@@ -1,41 +1,139 @@
 {
-    "cashier_header": "Kasier",
-    "date_header": "Tanggal",
-    "opening_header": "Pembukaan",
-    "running_opening_header": "PembukaanBerjalan",
-    "dp_header": "DP",
-    "running_dp_header": "DPBerjalan",
-    "voucher_header": "Voucher",
-    "running_voucher_header": "VoucherBerjalan",
-    "cash_header": "Kas",
-    "running_cash_header": "KasBerjalan",
-    "payroll_header": "Gaji",
-    "running_payroll_header": "GajiBerjalan",
-    "credit_card_header": "KartuKredit",
-    "running_credit_card_header": "KartuKreditBerjalan",
-    "debit_card_header": "KartuDebit",
-    "running_debit_card_header": "KartuDebitBerjalan",
-    "online_header": "Online",
-    "running_online_header": "OnlineBerjalan",
-    "withdrawn_header": "Penarikan",
-    "running_withdrawn_header": "PenarikanBerjalan",
-    "cancel_header": "Pembatalan",
-    "running_cancel_header": "PembatalanBerjalan",
-    "balance_header": "Saldo",
-    "running_balance_header": "SaldoBerjalan",
-    "stock_id_header": "KodeBarang",
-    "stock_name_header": "NamaBarang",
-    "price_header": "Harga",
-    "unit_header": "Satuan",
-    "qty_header": "Kuantitas",
-    "currency_header": "MataUang",
-    "amount_header": "Jumlah",
-    "amount_tax_header": "JumlahPajak",
-    "subtotal_header": "Subtotal",
-    "amount_tax_total_header": "TotalPajak",
-    "invoice_header": "Faktur",
-    "supplier_header": "Pemasok",
-    "customer_header": "Pelanggan",
-    "location_header": "Lokasi",
-    "total_balance_header": "TotalSaldo"
-}
+    "cash_drawer_report": {
+      "date_header": "Tanggal",
+      "opening_header": "Pembukaan",
+      "running_opening_header": "Pembukaan Berjalan",
+      "dp_header": "DP",
+      "running_dp_header": "DP Berjalan",
+      "voucher_header": "Voucher",
+      "running_voucher_header": "Voucher Berjalan",
+      "cash_header": "Tunai",
+      "running_cash_header": "Tunai Berjalan",
+      "payroll_header": "Penggajian",
+      "running_payroll_header": "Penggajian Berjalan",
+      "credit_card_header": "Kartu Kredit",
+      "running_credit_card_header": "Kartu Kredit Berjalan",
+      "debit_card_header": "Kartu Debit",
+      "running_debit_card_header": "Kartu Debit Berjalan",
+      "online_header": "Online",
+      "running_online_header": "Online Berjalan",
+      "withdrawn_header": "Penarikan",
+      "running_withdrawn_header": "Penarikan Berjalan",
+      "cancel_header": "Pembatalan",
+      "running_cancel_header": "Pembatalan Berjalan",
+      "balance_header": "Saldo",
+      "running_balance_header": "Saldo Berjalan"
+    },
+    "cash_drawer_report_detail": {
+      "cashier_header": "Kasir",
+      "date_header": "Tanggal",
+      "opening_header": "Pembukaan",
+      "running_opening_header": "Pembukaan Berjalan",
+      "dp_header": "DP",
+      "running_dp_header": "DP Berjalan",
+      "voucher_header": "Voucher",
+      "running_voucher_header": "Voucher Berjalan",
+      "cash_header": "Tunai",
+      "running_cash_header": "Tunai Berjalan",
+      "payroll_header": "Penggajian",
+      "running_payroll_header": "Penggajian Berjalan",
+      "credit_card_header": "Kartu Kredit",
+      "running_credit_card_header": "Kartu Kredit Berjalan",
+      "debit_card_header": "Kartu Debit",
+      "running_debit_card_header": "Kartu Debit Berjalan",
+      "online_header": "Online",
+      "running_online_header": "Online Berjalan",
+      "withdrawn_header": "Penarikan",
+      "running_withdrawn_header": "Penarikan Berjalan",
+      "cancel_header": "Pembatalan",
+      "running_cancel_header": "Pembatalan Berjalan",
+      "balance_header": "Saldo",
+      "running_balance_header": "Saldo Berjalan"
+    },
+    "price_report": {
+      "stock_id_header": "ID Stok-1",
+      "stock_name_header": "Nama Stok",
+      "price_header": "Harga",
+      "unit_header": "Unit"
+    },
+    "stock_report": {
+      "stock_id_header": "ID Stok",
+      "stock_name_header": "Nama Stok",
+      "qty_header": "Jumlah",
+      "price_header": "Harga",
+      "location_header": "Lokasi",
+      "balance_header": "Saldo",
+      "total_balance_header": "Total Saldo"
+    },
+    "purchasing_report": {
+      "invoice_header": "Faktur",
+      "date_header": "Tanggal",
+      "supplier_header": "Pemasok",
+      "currency_header": "Mata Uang",
+      "amount_header": "Jumlah",
+      "subtotal_header": "Subtotal"
+    },
+    "purchasing_report_no_disc": {
+      "invoice_header": "Faktur",
+      "date_header": "Tanggal",
+      "supplier_header": "Pemasok",
+      "currency_header": "Mata Uang",
+      "amount_header": "Jumlah",
+      "subtotal_header": "Subtotal"
+    },
+    "purchasing_analyst_report": {
+      "stock_id_header": "ID Stok",
+      "stock_name_header": "Nama Stok",
+      "qty_header": "Jumlah",
+      "currency_header": "Mata Uang",
+      "amount_header": "Jumlah",
+      "amount_tax_header": "Pajak Jumlah",
+      "subtotal_header": "Subtotal",
+      "amount_tax_total_header": "Total Pajak Jumlah"
+    },
+    "purchasing_analyst_report_no_disc": {
+      "stock_id_header": "ID Stok",
+      "stock_name_header": "Nama Stok",
+      "qty_header": "Jumlah",
+      "currency_header": "Mata Uang",
+      "amount_header": "Jumlah",
+      "amount_tax_header": "Pajak Jumlah",
+      "subtotal_header": "Subtotal",
+      "amount_tax_total_header": "Total Pajak Jumlah"
+    },
+    "sales_report": {
+      "invoice_header": "Faktur",
+      "date_header": "Tanggal",
+      "currency_header": "Mata Uang",
+      "amount_header": "Jumlah",
+      "subtotal_header": "Subtotal"
+    },
+    "sales_report_2": {
+      "invoice_header": "Faktur",
+      "date_header": "Tanggal",
+      "currency_header": "Mata Uang",
+      "amount_header": "Jumlah",
+      "subtotal_header": "Subtotal"
+    },
+    "sales_analyst_report": {
+      "stock_id_header": "ID Stok",
+      "stock_name_header": "Nama Stok",
+      "qty_header": "Jumlah",
+      "currency_header": "Mata Uang",
+      "amount_header": "Jumlah",
+      "amount_tax_header": "Pajak Jumlah",
+      "subtotal_header": "Subtotal",
+      "amount_tax_total_header": "Total Pajak Jumlah"
+    },
+    "sales_analyst_report_2": {
+      "stock_id_header": "ID Stok",
+      "stock_name_header": "Nama Stok",
+      "qty_header": "Jumlah",
+      "currency_header": "Mata Uang",
+      "amount_header": "Jumlah",
+      "amount_tax_header": "Pajak Jumlah",
+      "subtotal_header": "Subtotal",
+      "amount_tax_total_header": "Total Pajak Jumlah"
+    }
+  }
+  
