--- a/src/locales/en/menu.json
+++ b/src/locales/en/menu.json
@@ -8,7 +8,7 @@
     "purchasing_analyst_report": "Purchasing Analyst Report",
     "purchasing_analyst_report_no_disc": "Purchasing Analyst Report (No Disc)",
     "sales_report": "Sales Report",
-    "sales_report_no_2": "Sales Report (No Disc)",
+    "sales_report_2": "Sales Report (No Disc)",
     "sales_analyst_report": "Sales Analyst Report",
     "sales_analyst_report_2": "Sales Analyst Report (No Disc)",
     "cash_drawer_report": "Cash Drawer Report",
