Remove running keys from json files

--- a/src/locales/en/headers.json
+++ b/src/locales/en/headers.json
@@ -2,63 +2,41 @@
   "cash_drawer_report": {
     "date_header": "Date",
     "opening_header": "Opening",
-    "running_opening_header": "RunningOpening",
     "dp_header": "DP",
-    "running_dp_header": "RunningDP",
     "voucher_header": "Voucher",
-    "running_voucher_header": "RunningVoucher",
     "cash_header": "Cash",
-    "running_cash_header": "RunningCash",
     "payroll_header": "Payroll",
-    "running_payroll_header": "RunningPayroll",
     "credit_card_header": "CreditCard",
-    "running_credit_card_header": "RunningCreditCard",
     "debit_card_header": "DebitCard",
-    "running_debit_card_header": "RunningDebitCard",
     "online_header": "Online",
-    "running_online_header": "RunningOnline",
     "withdrawn_header": "Withdrawn",
-    "running_withdrawn_header": "RunningWithdrawn",
     "cancel_header": "Cancel",
-    "running_cancel_header": "RunningCancel",
-    "balance_header": "Balance",
-    "running_balance_header": "RunningBalance"
+    "balance_header": "Balance"
   },
   "cash_drawer_report_detail": {
     "cashier_header": "Cashier",
     "date_header": "Date",
     "opening_header": "Opening",
-    "running_opening_header": "RunningOpening",
     "dp_header": "DP",
-    "running_dp_header": "RunningDP",
     "voucher_header": "Voucher",
-    "running_voucher_header": "RunningVoucher",
     "cash_header": "Cash",
-    "running_cash_header": "RunningCash",
     "payroll_header": "Payroll",
-    "running_payroll_header": "RunningPayroll",
     "credit_card_header": "CreditCard",
-    "running_credit_card_header": "RunningCreditCard",
     "debit_card_header": "DebitCard",
-    "running_debit_card_header": "RunningDebitCard",
     "online_header": "Online",
-    "running_online_header": "RunningOnline",
     "withdrawn_header": "Withdrawn",
-    "running_withdrawn_header": "RunningWithdrawn",
     "cancel_header": "Cancel",
-    "running_cancel_header": "RunningCancel",
-    "balance_header": "Balance",
-    "running_balance_header": "RunningBalance"
+    "balance_header": "Balance"
   },
   "price_report": {
-    "stock_id_header": "StockID-1",
-    "stock_name_header": "StockName",
+    "stock_id_header": "Stock ID",
+    "stock_name_header": "Stock Name",
     "price_header": "Price",
     "unit_header": "Unit"
   },
   "stock_report": {
-    "stock_id_header": "StockID",
-    "stock_name_header": "StockName",
+    "stock_id_header": "Stock ID",
+    "stock_name_header": "Stock Name",
     "qty_header": "Qty",
     "price_header": "Price",
     "location_header": "Location",
