--- a/src/locales/id/headers.json
+++ b/src/locales/id/headers.json
@@ -2,56 +2,34 @@
     "cash_drawer_report": {
       "date_header": "Tanggal",
       "opening_header": "Pembukaan",
-      "running_opening_header": "Pembukaan Berjalan",
       "dp_header": "DP",
-      "running_dp_header": "DP Berjalan",
       "voucher_header": "Voucher",
-      "running_voucher_header": "Voucher Berjalan",
       "cash_header": "Tunai",
-      "running_cash_header": "Tunai Berjalan",
       "payroll_header": "Penggajian",
-      "running_payroll_header": "Penggajian Berjalan",
       "credit_card_header": "Kartu Kredit",
-      "running_credit_card_header": "Kartu Kredit Berjalan",
       "debit_card_header": "Kartu Debit",
-      "running_debit_card_header": "Kartu Debit Berjalan",
       "online_header": "Online",
-      "running_online_header": "Online Berjalan",
       "withdrawn_header": "Penarikan",
-      "running_withdrawn_header": "Penarikan Berjalan",
       "cancel_header": "Pembatalan",
-      "running_cancel_header": "Pembatalan Berjalan",
-      "balance_header": "Saldo",
-      "running_balance_header": "Saldo Berjalan"
+      "balance_header": "Saldo"
     },
     "cash_drawer_report_detail": {
       "cashier_header": "Kasir",
       "date_header": "Tanggal",
       "opening_header": "Pembukaan",
-      "running_opening_header": "Pembukaan Berjalan",
       "dp_header": "DP",
-      "running_dp_header": "DP Berjalan",
       "voucher_header": "Voucher",
-      "running_voucher_header": "Voucher Berjalan",
       "cash_header": "Tunai",
-      "running_cash_header": "Tunai Berjalan",
       "payroll_header": "Penggajian",
-      "running_payroll_header": "Penggajian Berjalan",
       "credit_card_header": "Kartu Kredit",
-      "running_credit_card_header": "Kartu Kredit Berjalan",
       "debit_card_header": "Kartu Debit",
-      "running_debit_card_header": "Kartu Debit Berjalan",
       "online_header": "Online",
-      "running_online_header": "Online Berjalan",
       "withdrawn_header": "Penarikan",
-      "running_withdrawn_header": "Penarikan Berjalan",
       "cancel_header": "Pembatalan",
-      "running_cancel_header": "Pembatalan Berjalan",
-      "balance_header": "Saldo",
-      "running_balance_header": "Saldo Berjalan"
+      "balance_header": "Saldo"
     },
     "price_report": {
-      "stock_id_header": "ID Stok-1",
+      "stock_id_header": "ID Stok",
       "stock_name_header": "Nama Stok",
       "price_header": "Harga",
       "unit_header": "Unit"
