Add unauthorized login permission and set default locale to indonesian

--- a/src/locales/en/backend.json
+++ b/src/locales/en/backend.json
@@ -3,5 +3,6 @@
     "invalid_user": "Invalid username or password!",
     "data_found": "Data retrieved successfully!",
     "connection_string_not_found": "Please specify connection string",
-    "bad_connection_string_format": "Provided connection string is not in correct format"
+    "bad_connection_string_format": "Provided connection string is not in correct format",
+    "unauthorized_user": "User does not allowed to login"
 }
