new localized keys added pagination and search logic implemented

--- a/src/locales/en/menu.json
+++ b/src/locales/en/menu.json
@@ -19,5 +19,10 @@
     "select_database": "Select Database",
     "connect": "Connect",
     "filter": "Filter",
-    "clear": "Clear"
+    "clear": "Clear",
+    "page": "Page",
+    "of": "of",
+    "search": "Search in",
+    "next": "Next",
+    "previous": "Previous"
 }
