--- a/src/locales/id/menu.json
+++ b/src/locales/id/menu.json
@@ -1,5 +1,8 @@
 {
     "sales_transaction": "Faktur Penjualan",
+    "sales_order_transaction": "Faktur Pesanan Penjualan",
+    "point_of_sale_transaction": "Tempat Penjualan",
+    "stock_adjusment": "Penyesuaian Stok",
     "scan_barcode": "Pindai Barcode",
     "switch_database": "Ganti Basis Data",
     "stock_report": "Saldo Stock",
