--- a/src/locales/en/backend.json
+++ b/src/locales/en/backend.json
@@ -2,7 +2,9 @@
     "no_data_found": "Data not found",
     "invalid_user": "Invalid username or password!",
     "query_success": "Query executed successfully",
-    "query_fail": "Query failed to execute",
+    "query_failed": "Query failed to execute",
+    "transaction_success": "Transaction Completed",
+    "transaction_failed": "Transaction Failed",
     "data_found": "Data retrieved successfully!",
     "connection_string_not_found": "Please specify connection string",
     "bad_connection_string_format": "Provided connection string is not in correct format",
