--- a/src/locales/id/backend.json
+++ b/src/locales/id/backend.json
@@ -3,7 +3,9 @@
     "invalid_user": "Nama pengguna atau kata sandi tidak valid!",
     "data_found": "Data berhasil diambil!",
     "query_success": "Kueri berhasil dijalankan",
-    "query_fail": "Kueri gagal dijalankan",
+    "query_failed": "Kueri gagal dijalankan",
+    "transaction_success": "Transcation Completed",
+    "transaction_failed": "Transcation Failed",
     "connection_string_not_found": "Harap tentukan string koneksi",
     "bad_connection_string_format": "String koneksi yang diberikan tidak dalam format yang benar",
     "unauthorized_user": "Pengguna tidak diizinkan untuk login",
